Working on separate UCI executable for other GUI's

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,10 @@
-all:
-	gcc -O2 -Wall main.c bitboards.c interface.c uci.c search.c eval.c -o run
+all: aldan aldanuci
+
+aldan: aldan.c
+	gcc -O2 -Wall -Wextra bitboards.c search.c eval.c interface.c aldan.c -o aldan
+
+aldanuci: aldanuci.c
+	x86_64-w64-mingw32-gcc -O2 -Wall -Wextra bitboards.c search.c eval.c interface.c aldanuci.c -o aldanuci.exe
 
 clean:
-	rm -f run
+	rm -f aldan aldanuci.exe
