Continue magic and transposition

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,13 @@
-all: aldan aldanuci
+all: aldan aldanuci aldanprofile
 
 aldan: aldan.c
-	gcc -O2 -Wall -Wextra bitboards.c search.c eval.c interface.c aldan.c -o aldan
+	gcc -O2 -Wall -Wextra bitboards.c search.c eval.c interface.c aldan.c magic.c transposition.c -o aldan
+
+aldanprofile: aldan.c
+	gcc -O0 -Wall -Wextra bitboards.c search.c eval.c interface.c aldan.c magic.c transposition.c -o aldanprofile -pg
 
 aldanuci: aldanuci.c
-	x86_64-w64-mingw32-gcc -O2 -Wall -Wextra bitboards.c search.c eval.c interface.c aldanuci.c -o aldanuci.exe
+	x86_64-w64-mingw32-gcc -O2 -Wall -Wextra bitboards.c search.c eval.c interface.c aldanuci.c magic.c transposition.c -o aldanuci.exe
 
 clean:
-	rm -f aldan aldanuci.exe
+	rm -f aldan aldanuci.exe aldanprofile
